# restful_api_tests

./: README.md  pyproject.toml  restful_testful.py
test/api/objects/: conftest.py  constants.py  test_DELETE_restful.py  test_GET_restful.py  test_POST_restful.py  test_PUT_restful.py  test_restful.py
